--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-/src/main.py
-/data/
-/src/data/__py_cache__/
-src/transformers/__pycache__/
+src/main.py
+data/
+src/data/__pycache__/
+src/transformer/__pycache__/
 src/lstm/__pycache__/
 src/classic/__pycache__/
 src/preprocessing/__pycache__/
